<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.auth.login.LoginFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_margin="@dimen/_10sdp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/welcome_back"
        android:textColor="@color/primary_gray"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintEnd_toEndOf="@+id/imgLogo"
        app:layout_constraintStart_toStartOf="@+id/imgLogo"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/poppins"
        android:text="@string/login_to_your_account"
        android:textColor="@color/primary_gray"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="@+id/imgLogo"
        app:layout_constraintStart_toStartOf="@+id/imgLogo"
        app:layout_constraintTop_toBottomOf="@id/txtWelcome" />

    <ImageView
        android:id="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/tree"
        app:layout_constraintEnd_toStartOf="@id/txtLogin"
        app:layout_constraintTop_toTopOf="@id/txtLogin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmailContainer"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:hint="@string/email_address"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:hintTextColor="#80212121"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img1"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPasswordContainer"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:hint="@string/password"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:hintTextColor="#80212121"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEmailContainer"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtPasswordContainer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:text="@string/stay_logged_in"
        android:textColor="#9a9b9b"
        android:padding="@dimen/_5sdp"
        />

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtPasswordContainer"
        app:layout_constraintEnd_toEndOf="@id/txtPasswordContainer"
        android:text="@string/forgot_your_password"
        android:layout_margin="@dimen/_10sdp"
        android:textColor="#8f212121"
        android:fontFamily="@font/poppins_light"
        />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:padding="@dimen/_12sdp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="@dimen/_16sdp"
        app:backgroundTint="@null"
        android:background="@drawable/checkbox_checked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        android:src="@drawable/path"/>-->



</androidx.constraintlayout.widget.ConstraintLayout>