<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.welcome.WelcomeFragment"
    android:background="@color/background">

    <TextView
        android:id="@+id/txtReco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/recobooks"
        android:textColor="#562505"
        android:textSize="@dimen/_48sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:maxLines="3"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtReco" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:layout_marginTop="32dp"
        android:background="@drawable/checkbox_checked"
        android:elevation="@dimen/_10sdp"
        android:fontFamily="@font/poppins"
        android:padding="@dimen/_8sdp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:backgroundTint="@null"
        app:elevation="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />

    <TextView
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins"
        android:padding="@dimen/_8sdp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/darkbrown"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        tools:layout_editor_absoluteY="466dp" />

    <ImageView
        android:id="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="visible"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        android:layout_marginStart="16dp"
        android:padding="@dimen/_8sdp"
        android:text="@string/dont_have_account_yet"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
        app:layout_constraintVertical_bias="0.057"

        />


</androidx.constraintlayout.widget.ConstraintLayout>