<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.signup.SignUpFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/welcome_back"
        android:textColor="@color/primary_gray"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintEnd_toEndOf="@+id/imgLogo"
        app:layout_constraintStart_toStartOf="@+id/imgLogo"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/create_your_account"
        android:textColor="@color/primary_gray"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="@+id/imgLogo"
        app:layout_constraintStart_toStartOf="@+id/imgLogo"
        app:layout_constraintTop_toBottomOf="@id/txtWelcome" />

    <ImageView
        android:id="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/tree"
        app:layout_constraintEnd_toStartOf="@id/txtLogin"
        app:layout_constraintTop_toTopOf="@id/txtLogin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtFirstNameContainer"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/first_name"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:hintTextColor="#80212121"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtFirstName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLastNameContainer"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/last_name"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:hintTextColor="#80212121"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtFirstNameContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtLastName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmailContainer"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/email_address"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:hintTextColor="#80212121"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtLastNameContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPasswordContainer"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/password"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:hintTextColor="#80212121"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEmailContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPasswordConfirmContainer"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/confirm_password"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:hintTextColor="#80212121"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPasswordContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:layout_marginTop="20dp"
        android:background="@drawable/checkbox_checked"
        android:enabled="true"
        android:fontFamily="@font/poppins"
        android:padding="@dimen/_8sdp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#7d7771"
        android:textSize="@dimen/_16sdp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordConfirmContainer" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/wave"
        app:layout_constraintBottom_toBottomOf="parent" />

    <FrameLayout
        android:id="@+id/frameLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#60050505"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:padding="@dimen/_8sdp" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>