<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.forgetpassword.ForgetPasswordFragment"
    android:background="@color/background">


    <FrameLayout
        android:id="@+id/frameLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#60050505"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:padding="@dimen/_8sdp" />
    </FrameLayout>

    <TextView
        android:id="@+id/txtFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:fontFamily="@font/poppins"
        android:text="@string/find_your_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="102dp" />

    <TextView
        android:id="@+id/txtEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/poppins"
        android:text="@string/enter_your_email"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmailContainer"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:layout_marginTop="20dp"
        android:hint="@string/email_address"
        android:textColorHint="#80212121"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEnter">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppins"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnFindAccount"
        android:layout_width="@dimen/_134sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_margin="@dimen/_16sdp"
        android:layout_marginTop="48dp"
        android:background="@drawable/checkbox_background"
        android:enabled="false"
        android:fontFamily="@font/poppins"
        android:padding="@dimen/_8sdp"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_16sdp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailContainer" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:src="@drawable/securityon_pana"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFind" />

</androidx.constraintlayout.widget.ConstraintLayout>