<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.newpassword.CreateNewPasswordFragment"
    android:background="@color/background">

    <ImageView
        android:id="@+id/pathTop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/path_top2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pathBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/path_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVerify"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/createnewpasswordtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/create_new_password"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pathTop" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="8dp"
        android:src="@drawable/security_cuate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createnewpasswordtxt"
        app:layout_constraintDimensionRatio="2:1"/>

    <TextView
        android:id="@+id/Your_new_passwordtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Your_new_password"
        android:textAlignment="center"
        android:textSize="@dimen/_14sdp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:autoSizeTextType="uniform"/>

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="@dimen/_134sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_margin="@dimen/_8sdp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_border"
        android:enabled="false"
        android:fontFamily="@font/poppins"
        android:padding="@dimen/_8sdp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="#7d7771"
        android:textSize="@dimen/_16sdp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordConfirmContainer" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPasswordContainer"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:textColorHint="#80212121"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Your_new_passwordtxt"
        app:endIconTint="@color/cardview_dark_background">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPasswordConfirmContainer"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="12dp"
        android:hint="@string/confirm_password"
        android:textColorHint="#80212121"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPasswordContainer"
        app:endIconTint="@color/cardview_dark_background"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext_border"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/frameLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#60050505"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:padding="@dimen/_8sdp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>